# ai-workflow-projects

./: .gitignore
.github/workflows/: python-projects-ci.yml
01_document_diff_analysis/: README.md  SPEC.md  SPEC_COMPLIANCE.md  decisions.md  diagrams.md  pyproject.toml
01_document_diff_analysis/src/docdiff/: __init__.py
01_document_diff_analysis/src/docdiff/diff/: __init__.py  engine.py
01_document_diff_analysis/src/docdiff/model/: __init__.py  types.py
01_document_diff_analysis/src/docdiff/parsers/: __init__.py  base.py  common.py  docx_parser.py  html_parser.py  io.py  markdown_parser.py
01_document_diff_analysis/src/docdiff/renderers/: __init__.py  text.py
01_document_diff_analysis/tests/: conftest.py  test_diff_engine.py  test_docx_parser.py  test_html_parser.py  test_integration_flow.py  test_markdown_parser.py  test_model_serialization.py  test_snapshots.py  test_text_renderer.py
01_document_diff_analysis/tests/snapshots/: html_parser_noise_and_order.json  markdown_parser_mixed_blocks.json  rendered_markdown_flow.txt
02_dependency_auditor/: IMPLEMENTATION_DECISIONS.md  README.md  SPEC.md  SPEC_COMPLIANCE.md  decisions.md  diagrams.md  pyproject.toml
02_dependency_auditor/src/auditpy/: __init__.py  __main__.py  cli.py  config.py  licenses.py  models.py  parsing.py  policy.py  reporting.py  resolution.py  vulnerabilities.py
02_dependency_auditor/tests/: test_cli_reporting.py  test_config_and_cli_validation.py  test_licenses.py  test_models.py  test_parsing.py  test_reporting.py  test_resolution.py  test_vulnerabilities.py
03_openapi_to_sdk/: README.md  SPEC.md  SPEC_COMPLIANCE_REPORT.md  decisions.md  diagrams.md  pyproject.toml  tradeoffs.md
03_openapi_to_sdk/scripts/: quality_gates.sh
03_openapi_to_sdk/src/openapi_to_sdk/: __init__.py
03_openapi_to_sdk/src/openapi_to_sdk/cli/: main.py
03_openapi_to_sdk/src/openapi_to_sdk/generator/: __init__.py  pipeline.py  renderer.py
03_openapi_to_sdk/src/openapi_to_sdk/ir/: __init__.py  _mapper_common.py  _operation_mapping.py  _schema_mapping.py  models.py  type_mapper.py
03_openapi_to_sdk/src/openapi_to_sdk/parser/: __init__.py  errors.py  loader.py
03_openapi_to_sdk/src/openapi_to_sdk/runtime/: __init__.py  base_client.py  clients.py  errors.py
03_openapi_to_sdk/src/openapi_to_sdk/templates/: client.py.j2  model_macros.j2  models.py.j2  package_init.py.j2
03_openapi_to_sdk/tests/: test_cli_pipeline.py  test_client_generation.py  test_imports.py  test_loader.py  test_loader_edge_cases.py  test_package_integrity.py  test_performance_smoke.py  test_runtime_clients.py  test_templates.py  test_type_mapping.py  test_type_mapping_edges.py
03_openapi_to_sdk/tests/golden/: client_snapshot.py  models.py  models_snapshot.py
04_sql_dump_query_engine/: README.md  SPEC.md  SPEC_COMPLIANCE.md  decisions.md  diagrams.md  pyproject.toml
04_sql_dump_query_engine/src/sql_dump_query_engine/: __init__.py  api.py  cli.py  diagnostics.py  engine.py  errors.py  models.py
04_sql_dump_query_engine/src/sql_dump_query_engine/loading/: __init__.py  batching.py  loader.py
04_sql_dump_query_engine/src/sql_dump_query_engine/parsing/: __init__.py  pg_copy.py  splitter.py
04_sql_dump_query_engine/src/sql_dump_query_engine/translation/: __init__.py  _sql_defs.py  mapper.py  translator.py
04_sql_dump_query_engine/tests/: test_api_models.py  test_cli.py  test_mysqldump_loader.py  test_parser_translation_pipeline.py  test_pg_copy_loader.py  test_scaffold_imports.py  test_snapshot_outputs.py
04_sql_dump_query_engine/tests/fixtures/: README.md  mysqldump_primary.sql  mysqldump_unknown_type.sql  pg_copy_basic.sql  pg_copy_with_escapes.sql
04_sql_dump_query_engine/tests/snapshots/: batch_insert_statement.json  split_statements_copy.json
scripts/: run_python_ci_checks.sh
