[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docdiff"
version = "0.1.0"
description = "Deterministic cross-format document diffing library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-docx",
  "beautifulsoup4",
  "markdown-it-py",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
