[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docdiff"
version = "0.1.0"
description = "Deterministic cross-format document diffing library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-docx",
  "beautifulsoup4",
  "markdown-it-py",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
exclude = ["build"]
