[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "openapi-to-sdk"
version = "0.1.0"
description = "Generate typed Python SDKs from OpenAPI 3.x specifications"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAPI to SDK Team" }
]
dependencies = [
  "pydantic>=2",
  "httpx",
  "jinja2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.8",
  "mypy>=1.11",
]

[project.scripts]
openapi-to-sdk = "openapi_to_sdk.cli.main:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
mypy_path = "src"
packages = ["openapi_to_sdk"]
