[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sql-dump-query-engine"
version = "0.1.0"
description = "Query SQL dump files with DuckDB without starting source database servers."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "AI Workflow Candidate"}]
dependencies = [
  "duckdb>=1.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "mypy>=1.10",
]

[project.scripts]
sqldump-query = "sql_dump_query_engine.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
